fixing small issue with navbar and scrollbar

--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -36,6 +36,7 @@
 
 .navigation-menu {
   margin-left: auto;
+  margin-right: 15px;
 }
 
 .SigLogo {
